[tool.poetry]
name = "goit-python-web-hw6-ii"
version = "0.1.0"
description = ""
authors = ["Volodymyr Kurov <vokur13@gmail.com>"]
readme = "README.md"
packages = [{include = "goit_python_web_hw6_ii"}]

[tool.poetry.dependencies]
python = "^3.11"
faker = "^19.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
